objects/opportunitySnapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>opportunitySnapshot</relationshipLabel>
        <relationshipName>opportunitySnapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <label>Fiscal Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>opportunitySnapshot</relationshipLabel>
        <relationshipName>opportunitySnapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <description>No. of records that are grouped together in case of summarized reports.</description>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>opportunitySnapshot</label>
    <nameField>
        <displayFormat>OPS-{00000000}</displayFormat>
        <label>opportunityPipelineSnapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>opportunitySnapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>